<resources>
    <string name="app_name">InputContacts</string>
    <string name="inputEmergencyContactsStr">Input Emergency Contacts</string>
    <string name="emergencyContactNameLabelStr">Name:</string>
    <string name="emergencyContactPhoneInputStr">Enter phone number:</string>
    <string name="emergencyContactNameInputStr">Enter name:</string>
    <string name="emergencyContactPhoneLabelStr">Phone:</string>
    <string name="buttonEmergencyContactStr">ADD CONTACT</string>
</resources>